[package]
name = "rubato"
version = "0.14.1"
rust-version = "1.61"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "Asynchronous resampling library intended for audio data"
license = "MIT"
repository = "https://github.com/HEnquist/rubato"
keywords = ["interpolation", "resampling"]
categories = ["multimedia::audio"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.18", optional = true }
realfft = "3.3.0"
num-complex = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"

[dev-dependencies] 
env_logger = "0.10.0"
criterion = "0.5.1"
rand = "0.8.5"
num-traits = "0.2.15"
log = "0.4.18"
approx = "0.5.1"

[[bench]]
name = "resamplers"
harness = false

[lib]
bench = false
path = "src/lib.rs"
