[package]
name = "rubato"
version = "0.17.0"
rust-version = "1.71"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "Asynchronous resampling library intended for audio data"
license = "MIT"
repository = "https://github.com/HEnquist/rubato"
keywords = ["interpolation", "resampling"]
categories = ["multimedia::audio"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fft_resampler"]
fft_resampler = ["realfft", "num-complex"]
log = ["dep:log"]

[dependencies]
log = { version = "0.4.18", optional = true }
realfft = { version = "3.3.0", optional = true }
num-complex = { version = "0.4", optional = true }
num-integer = "0.1.45"
num-traits = "0.2"
#audioadapter = {path = "../audioadapter-rs"}
audioadapter = "0.2.0"

[dev-dependencies] 
env_logger = "0.10.0"
criterion = "0.5.1"
rand = "0.8.5"
num-traits = "0.2.15"
log = "0.4.18"
approx = "0.5.1"
test-log = "0.2.16"
test-case = "3"

[[bench]]
name = "resamplers"
harness = false

[lib]
bench = false
path = "src/lib.rs"
