[package]
name = "rubato"
version = "1.0.0-preview.2"
rust-version = "1.71"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "Asynchronous resampling library intended for audio data"
license = "MIT"
repository = "https://github.com/HEnquist/rubato"
keywords = ["interpolation", "resampling"]
categories = ["multimedia::audio"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fft_resampler"]
fft_resampler = ["realfft", "num-complex"]
log = ["dep:log"]
bench_asyncro = []

[dependencies]
log = { version = "0.4.18", optional = true }
realfft = { version = "3.3.0", optional = true }
num-complex = { version = "0.4", optional = true }
num-integer = "0.1.45"
num-traits = "0.2"
audioadapter = {version = "2.0.0", path = "../audioadapter-rs/audioadapter"}
audioadapter-buffers = {version = "2.0.0", path = "../audioadapter-rs/audioadapter-buffers"}
visibility = "0.1.1"
windowfunctions = "0.1.1"

[dev-dependencies] 
env_logger = "0.10.0"
criterion = "0.8"
rand = "0.8.5"
num-traits = "0.2.15"
log = "0.4.18"
approx = "0.5.1"
test-log = "0.2.16"
test-case = "3"
audioadapter-sample = {version = "2.0.0", path = "../audioadapter-rs/audioadapter-sample"}

[[bench]]
name = "resamplers"
harness = false

[lib]
bench = false
path = "src/lib.rs"
